car feature is added

--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
   <meta name="keyword" content="Computer engineer, web and mobile application developer">
   <!-- end: Meta -->
   <!-- <link rel="icon" href="img/turkey.ico" type="image/x-icon"> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.13.1/lodash.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css"/>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular-route.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
-  <link rel="stylesheet" href="https://gitcdn.link/repo/angular/bower-material/master/angular-material.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-animate.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-aria.min.js"></script>
-  <script src="https://gitcdn.link/repo/angular/bower-material/master/angular-material.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+  <script src="http://rawgit.com/daniel-nagy/md-data-table/master/dist/md-data-table.js"></script>
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="http://rawgit.com/daniel-nagy/md-data-table/master/dist/md-data-table.css">
   <script src="js/userController.js"></script>
   <script src="js/ngNotificationsBar.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/ngNotificationsBar.min.css" />
@@ -29,7 +30,7 @@
 </head>
 
 <!-- define angular controller -->
-<body ng-controller="userController as ctrl">
+<body ng-controller="userController as ctrl" ng-class="ctrl.cls">
 
   <nav class="navbar navbar-default">
     <div class="container">
@@ -39,8 +40,8 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li ng-if="ctrl.loggedin"><a ui-sref='home'><i class="fa fa-home"></i> Home</a></li>
-        <li ng-if="ctrl.loggedin"><a ui-sref='cars'><i class="fa fa-shield"></i> Cars</a></li>
-        <li ng-if="ctrl.loggedin"><a ng-click="ctrl.logout()"><i class="fa fa-shield"></i> Logout</a></li>
+        <li ng-if="ctrl.loggedin"><a ui-sref='cars'><i class="fa fa-car"></i> Cars</a></li>
+        <li ng-if="ctrl.loggedin"><a ng-click="ctrl.logout()"><i class="fa fa-ban"></i> Logout</a></li>
         <li ng-if="!ctrl.loggedin"><a ui-sref='login'><i class="fa fa-home"></i> Login</a></li>
         <li ng-if="!ctrl.loggedin"><a ui-sref='register'><i class="fa fa-shield"></i> Register</a></li>
       </ul>
