--- a/store/pages/cars.html
+++ b/store/pages/cars.html
@@ -8,7 +8,7 @@
       </md-toolbar>
       <md-input-container class="md-block">
         <label>Model</label>
-        <textarea name="model" ng-model="car.model" md-maxlength="150" rows="5" md-select-on-focus>
+        <textarea name="model" ng-model="car.model" md-maxlength="10" rows="5" md-select-on-focus>
         </textarea>
         <div class="errors" ng-messages="carForm.model.$error" ng-if="!car.model" ng-show="carForm.$submitted || carForm.model.$touched">
           <div ng-message="required">Required</div>
@@ -16,7 +16,7 @@
       </md-input-container>
       <md-input-container class="md-block">
         <label>Year</label>
-        <textarea name="year" ng-model="car.year" md-maxlength="150" rows="5" md-select-on-focus>
+        <textarea name="year" ng-model="car.year" md-maxlength="4" rows="5" md-select-on-focus>
         </textarea>
         <div class="errors" ng-messages="carForm.year.$error" ng-if="!car.year" ng-show="carForm.$submitted || carForm.year.$touched">
           <div ng-message="required">Required</div>
@@ -24,7 +24,7 @@
       </md-input-container>
       <md-input-container class="md-block">
         <label>Millage</label>
-        <textarea name="millage" ng-model="car.millage" md-maxlength="150" rows="5" md-select-on-focus>
+        <textarea name="millage" ng-model="car.millage" md-maxlength="7" rows="5" md-select-on-focus>
         </textarea>
         <div class="errors" ng-messages="carForm.millage.$error" ng-if="!car.millage" ng-show="carForm.$submitted || carForm.millage.$touched">
           <div ng-message="required">Required</div>
@@ -54,12 +54,12 @@
         </thead>
         <tbody md-body>
           <tr md-row md-select="car" md-on-select="selectedItem" md-on-deselect="deselectedItem" md-select-id="name" md-auto-select ng-repeat="car in cars">
-            <td md-cell>[[car.model]]</td>
-            <td md-cell>[[car.year]]</td>
-            <td md-cell>[[car.millage]]</td>
+            <td md-cell>{{car.model}}</td>
+            <td md-cell>{{car.year}}</td>
+            <td md-cell>{{car.millage}}</td>
             <td md-cell>
-              <md-button class="md-icon-button md-accent" ng-click="removeItem(car)" aria-label="Delete">
-                <i class="glyphicons-icon remove_2"></i>
+              <md-button class="md-icon-button md-accent" ng-click="carctrl.removeCar(car)" aria-label="Delete">
+                <i class="fa fa-times"></i>
               </md-button>
             </td>
           </tr>
