--- a/store/pages/home.html
+++ b/store/pages/home.html
@@ -1,3 +1,3 @@
-<div class="login" ng-controller="loginController as login">
+<div ng-controller="loginController as login">
 <h1>Hello World</h1>
 </div>
