--- a/store/pages/register.html
+++ b/store/pages/register.html
@@ -1,7 +1,7 @@
 <div class="login" ng-controller="registerController as register">
 <h1>Sign Up</h1>
 <form method="post" ng-submit="register.register()">
-    <input type="text" name="f" placeholder="First Name" ng-model="register.user.firstName" required="required" />
+    <input type="text" name="f" placeholder="First Name" ng-model="register.user.userName" required="required" />
     <input type="text" name="l" placeholder="Last Name" ng-model="register.user.lastName" required="required" />
     <input type="text" name="u" placeholder="Email" ng-model="register.user.email" required="required" />
     <input type="password" name="p" placeholder="Password" ng-model="register.user.password" required="required" />
