--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- start: Meta -->
   <meta charset="utf-8">
   <title>Evermight</title>
-  <meta name="description" content="Evermight">
+  <meta name="description" content="Systelos">
   <meta name="author" content="Semih GOKCEOGLU">
   <meta name="keyword" content="Computer engineer, web and mobile application developer">
   <!-- end: Meta -->
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="http://rawgit.com/daniel-nagy/md-data-table/master/dist/md-data-table.css">
-  <script src="js/userController.js"></script>
+  <script src="js/taskController.js"></script>
   <script src="js/ngNotificationsBar.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/ngNotificationsBar.min.css" />
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -31,7 +31,7 @@
 </head>
 
 <!-- define angular controller -->
-<body ng-controller="userController as ctrl" ng-class="ctrl.cls">
+<body ng-controller="taskController as ctrl" ng-class="ctrl.cls">
   <notifications-bar class="notifications"></notifications-bar>
   <nav class="navbar navbar-inverse">
     <div class="container">
@@ -40,11 +40,11 @@
       </div>
 
       <ul class="nav navbar-nav navbar-right">
-        <li ng-if="ctrl.loggedin"><a ui-sref='home'><i class="fa fa-home"></i> Home</a></li>
-        <li ng-if="ctrl.loggedin"><a ui-sref='cars'><i class="fa fa-car"></i> Cars</a></li>
-        <li ng-if="ctrl.loggedin"><a ng-click="ctrl.logout()"><i class="fa fa-ban"></i> Logout</a></li>
-        <li ng-if="!ctrl.loggedin"><a ui-sref='login'><i class="fa fa-home"></i> Login</a></li>
-        <li ng-if="!ctrl.loggedin"><a ui-sref='register'><i class="fa fa-shield"></i> Register</a></li>
+        <!-- <li ng-if="ctrl.loggedin"><a ui-sref='home'><i class="fa fa-home"></i> Home</a></li> -->
+        <li ng-if="ctrl.loggedin"><a ui-sref='cars'><i class="fa fa-car"></i> Tasks</a></li>
+        <!-- <li ng-if="ctrl.loggedin"><a ng-click="ctrl.logout()"><i class="fa fa-ban"></i> Logout</a></li> -->
+        <!-- <li ng-if="!ctrl.loggedin"><a ui-sref='login'><i class="fa fa-home"></i> Login</a></li> -->
+        <!-- <li ng-if="!ctrl.loggedin"><a ui-sref='register'><i class="fa fa-shield"></i> Register</a></li> -->
       </ul>
     </div>
   </nav>
